# Data-Science-Portfolio

./: .gitignore  Corporate_Bankruptcy_Prediction.ipynb  Dockerfile  Heart_Disease_Prediction_using_Patient_Biometric_Data.ipynb  IMPROVEMENTS.md  Jane_Street_Market_Prediction_XGBoost_and_Hyperparameter_Tuning.ipynb  Modern_Classification_Workflow_Bankruptcy.ipynb  NJ_Transit_+_Amtrak_(NEC)_Rail_Performance_Business_Solution.ipynb  README.md  Streamlit_Langchain_RAG_LLM.py  Supervised_Learning_Capstone-Predicting_Telecom_Customer_Churn_(IBM_Watson_Analytics).ipynb  Supervised_Learning_Heart_Disease_Prediction_using_Patient_Biometric_Data.ipynb  Unsupervised_Learning_Capstone_New_York_City_Bus_Data.ipynb  app.py  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-core.txt  requirements.txt  setup_data.py
advanced_visualization/: README.md  app.py  requirements-viz.txt
advanced_visualization/assets/: custom.css
api/: __init__.py  schemas.py  serve.py  train.py
docs/: BEST_PRACTICES.md  NOTEBOOKS_RUN.md
portfolio_utils/: __init__.py  data_loader.py  db_utils.py  ml_utils.py
scripts/: enhance_notebooks.py  fix_corporate_columns.py  install_deps.py  modernize_notebooks.py  normalize_notebooks.py  patch_notebooks.py  run_all_notebooks.py  run_nbconvert.py  run_notebook_tests.py  smoke_test_notebooks.py  verify_senior_sections.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_db_utils.py  test_ml_utils.py  test_train.py
