[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-portfolio"
version = "0.2.0"
description = "Data science & ML portfolio: classification, clustering, time series, RAG/LLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chandler Drake Talley" }]
keywords = ["data-science", "machine-learning", "portfolio", "jupyter", "kaggle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "openpyxl>=3.1",
    "scikit-learn>=1.2",
    "xgboost>=2.0",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scipy>=1.10",
    "imbalanced-learn>=0.10",
    "jupyter>=1.0",
    "notebook>=7.0",
    "kaggle>=1.5",
    "tensorflow>=2.12; python_version >= '3.9' and python_version < '3.13'",
]

[project.optional-dependencies]
rag = [
    "streamlit>=1.28",
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]
shap = ["shap>=0.44"]
dev = ["pytest>=7", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["portfolio_utils*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py", "*_test.py"]
